--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8">
 		<title>Reservation</title>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="./style/index.css">
 		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js" defer></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 		<script src="Vuejs/index.js" defer></script>
 	</head>
 	<body>
@@ -13,17 +15,38 @@
 			   <img src="../ressources/station-f.png" alt="logo" class="logo">
 			 </div></a>
 		</header>
-		
-		<div class="img_body">
-			<div class="vert_mid">
-					<h1>Réserver une salle de réunion</h1>
-					<p>Vous pouvez réserver une salle de réunion sur cette page</p>
-			</div>    
-		</div>
-		<section>
-			<div>
-
+		<div style="background-color: #f9f9f9">
+			<div class="img_body">
+				<div class="vert_mid">
+						<h1>Réserver une salle de réunion</h1>
+						<p>Vous pouvez réserver une salle de réunion sur cette page</p>
+				</div>    
 			</div>
-		</section>
+			<section>
+				<hr>
+				<div class="choices">
+					<div>
+						<label for="start">Choisissez une date:</label>
+						<input type="date" id="start" name="start-date">
+					</div>
+					<div>
+						<label for="capacity">Capacité:</label>
+						<input type="number" id="capacity" name="room-capacity">
+					</div>
+					<div ></div>
+						<select>
+							<option>Équipements</option>
+						</select>
+						
+					</div>	
+					<div class="dropdown">
+							<input type="checkbox" value="tv">
+							<label for="tv">Tv</label>
+							<input type="checkbox" value="rp">
+							<label for="rp">Rétroprojecteur</label>
+					</div>
+				</div>
+			</section>
+		</div>
 	</body>
 </html>
