--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
 		<script src="Vuejs/index.js" defer></script>
 	</head>
 	<body>
-		<header class="header" id="app">
+	<div id="app">
+		<header class="header">
 			<a href="https://stationf.co/fr/"><div class="head-div" @mouseover="active = true" @mouseleave="active = false" v-bind:style="logoGetColor">
 			   <img src="../ressources/station-f.png" alt="logo" class="logo">
 			 </div></a>
@@ -25,28 +26,56 @@
 			<section>
 				<hr>
 				<div class="choices">
-					<div>
-						<label for="start">Choisissez une date:</label>
-						<input type="date" id="start" name="start-date">
+					<div class="input-group mb-3">
+							<div class="input-group-prepend">
+									<span class="input-group-text" id="inputGroup-sizing-default">Date:</span>
+								  </div>
+						<input class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default" type="date" id="start" name="start-date">
 					</div>
-					<div>
-						<label for="capacity">Capacité:</label>
-						<input type="number" id="capacity" name="room-capacity">
+					<div class="input-group mb-3">
+							<div class="input-group-prepend">
+									<span class="input-group-text" id="inputGroup-sizing-default">Capacity:</span>
+								  </div>
+						<input class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default" type="number" id="capacity" name="room-capacity" min="1">
 					</div>
-					<div ></div>
-						<select>
-							<option>Équipements</option>
-						</select>
-						
-					</div>	
 					<div class="dropdown">
-							<input type="checkbox" value="tv">
-							<label for="tv">Tv</label>
-							<input type="checkbox" value="rp">
-							<label for="rp">Rétroprojecteur</label>
+						<button @click="dropdown = !dropdown" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							Équipements
+						</button>
+						<div v-bind:style="setHideOrReaveal">
+							<div>
+								<input type="checkbox" value="tv">
+								<label for="tv">Tv</label>
+							</div>
+							<div>
+								<input type="checkbox" value="rp">
+								<label for="rp">Rétroprojecteur</label>
+							</div>
+						</div>
+					</div>	
+				</div>
+				<hr>
+			</section>
+			<section>
+				<div v-for="room in rooms" class="room">
+					<div style="display: inline-block; vertical-align: middle; width: 33%; padding-top: 0.5%">
+						<h3 style="margin-bottom: 0%;">{{ room.name }}</h3>
+					</div>
+					<div class="users">
+						<img src="../ressources/users-icon.png">
+					<div style="text-align: center; display: inline-block; vertical-align: middle">	
+						<p style="margin-bottom: 0%"> {{ room.capacity }}</p>
+					</div>
+					</div>
+					<div class="stuff" v-if="inArray('retro projecteur', room.equipements)">
+						<img src="../ressources/retro-projecteur.png" class="rt">
+					</div>
+					<div class="stuff" v-if="inArray('Tv', room.equipements)">
+						<img src="../ressources/tv.svg" class="rt">
 					</div>
 				</div>
 			</section>
 		</div>
+	</div>
 	</body>
 </html>
