site done and ready to use

--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
 			</div>
 		</div>
 		</transition>
-		<transition name="fade">
+		<transition name="fading">
 		<div class="reservation-done" v-if="confirmation">
 			<p>Salle réservé avec succès !</p>
 		</div>
