--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Reservation</title>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="style/index.css">
+		<link rel="stylesheet" media="screen and (width)" type="text/css" href="style/index.css">
 		<link rel="shortcut icon" href="#"/>
 		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js" defer></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
@@ -18,7 +18,7 @@
 			   <img src="ressources/station-f.png" alt="logo" class="logo">
 			</div></a>
 		</header>
-		<div style="background-color: #f9f9f9">
+		<div>
 			<div class="img_body">
 				<div class="vert_mid">
 					<h1>Réserver une salle de réunion</h1>
@@ -59,6 +59,7 @@
 				<hr>
 			</section>
 			<section>
+				<div class="align">
 				<transition-group name="slide-fade" tag="div">
 				<div v-for="room in rooms" v-if="checkRoom(room.equipements, room.capacity, room.name)" v-bind:key="room.id" @click="setSelect(room)" v-bind:style="selected(room.name)" class="room">
 					<div class="room_name">
@@ -77,7 +78,8 @@
 						<img src="ressources/tv.svg" class="rt">
 					</div>
 				</div>
-			</transition-group>
+				</transition-group>
+				</div>
 			</section>
 			<div class="submit">
 				<button class="btn btn-primary" v-bind:style="{'background-color': submitButtonColor}" type="submit" v-bind:disabled="!formIsValid" @click="confirmRoom = !confirmRoom">Réserver</button>
@@ -86,15 +88,15 @@
 		</div>
 		<transition name="fade">
 		<div v-if="confirmRoom" v-bind:style="submitted">
-			<h4 style="text-align: center; font-size: 4vw">{{ selectedRoom.name }}</h4>
+			<h4 class="select_name">{{ selectedRoom.name }}</h4>
 			<div class="description">
 				<h5 class="align-description">Capacité:&nbsp</h5><p>{{ selectedRoom.capacity }}</p>
 				<h5 class="align-description">Équipements:</h5><p v-for="stuff in selectedRoom.equipements" style="float: left">&nbsp{{ stuff.name }}</p>
-				<div style="clear: both"><h5 style="float: left; font-size: 2.5vw">Description:&nbsp</h5><p style="font-size: 2vw">{{ selectedRoom.description }}</p></div>
+				<div style="clear: both"><h5 class="desc">Description:&nbsp</h5><p class="desc-content">{{ selectedRoom.description }}</p></div>
 				<h5 class="align-description">Date:&nbsp</h5><p>{{ selectedRoom.date }}</p>
 			</div>
 			<div class="confirmation">
-				<p style="font-size: 2.5vw; ">Confirmer la réservation ?</p>
+				<p class="desc-content">Confirmer la réservation ?</p>
 				<button id="yes" @click="triggerConfirmation">confirmer</button>
 				<button id="no" @click="confirmRoom = !confirmRoom">refuser</button>
 			</div>
